tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0250/input.js
x = { __proto__: 42, __proto__: 43 }
